.repos/effect-tsgo/testdata/baselines/reference/effect-v4/deterministicKeys_packageIdentifier.errors.txt
=== Metadata ===
Effect version: 4.0.0

/.src/test.ts(5,63): error TS377049: Key should be '@effect/test-app/test/ExpectedServiceIdentifier'. effect(deterministicKeys)
/.src/test.ts(8,46): error TS377049: Key should be '@effect/test-app/test/ErrorA'. effect(deterministicKeys)


==== /.src/tsconfig.json (0 errors) ====
    {
      "compilerOptions": {
        "plugins": [
          {
            "name": "@effect/language-service",
            "keyPatterns": [
              { "target": "service", "pattern": "package-identifier" },
              { "target": "error", "pattern": "package-identifier" }
            ]
          }
        ]
      }
    }
    

==== /.src/package.json (0 errors) ====
    { "name": "@effect/test-app", "version": "1.0.0" }
    

==== /.src/test.ts (2 errors) ====
    // @effect-diagnostics deterministicKeys:error
    import { ServiceMap, Data } from "effect"
    
    export class ExpectedServiceIdentifier
      extends ServiceMap.Service<ExpectedServiceIdentifier, {}>()("ExpectedServiceIdentifier")
                                                                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS377049: Key should be '@effect/test-app/test/ExpectedServiceIdentifier'. effect(deterministicKeys)
    {}
    
    export class ErrorA extends Data.TaggedError("ErrorA")<{}> {}
                                                 ~~~~~~~~
!!! error TS377049: Key should be '@effect/test-app/test/ErrorA'. effect(deterministicKeys)
    
